# nimlib

./: CHANGELOG.md  Cargo.toml  README.md
src/: algo.rs  game.rs  lib.rs  main.rs  moves.rs  nimbers.rs
tests/: 2k_nimbers.rs  simple_123.rs  simple_nimbers.rs  test_apply_move.rs  test_move_gen.rs
